--- a/.gitignore
+++ b/.gitignore
@@ -279,7 +279,7 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python
 apk/
 key
-# data/
+data/
 demo/
 demo_*.py
 
